Fixed spacing in filters

--- a/rechorder/static/rechorder/css/main.scss
+++ b/rechorder/static/rechorder/css/main.scss
@@ -799,6 +799,10 @@ mark {
     margin: 2px;
 }
 
+.tag-filter-button {
+    margin-top: 5px;
+}
+
 .key-filter-button-selected {
     background-color: $col-good;
     transition: $fade-time;
